[package]
name = "crane"
version = "0.1.0"
authors = ["Zach Bray <zachbray@googlemail.com>"]

[dependencies]
actix-web = { version = "0.7", features = ["rust-tls"] }
chrono = { version = "0.4.5", features = ["serde"] }
clap = "2.32.0"
env_logger = "0.5.12"
fnv = "1.0.6"
futures = "0.1.23"
jsonwebtoken = "5.0.0"
log = "0.4.3"
quick-error = "1.2.2"
serde = { version = "1.0.71", features = ["rc"] }
serde_derive = "1.0.71"
serde_json = "1.0.24"
