[package]
name = "crane"
version = "0.1.0"
authors = ["Zach Bray <zachbray@googlemail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
ctrlc = { version = "3.1.1", features = ["termination"] }
failure = "0.1.5"
failure_derive = "0.1.5"
git2 = "0.8.0"
human-panic = "1.0.1"
rand = "0.6.5"
reqwest = "0.9.10"
rusoto_core = "0.36.0"
rusoto_s3 = "0.36.0"
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
tui = "0.4.0"
termion = "1.5.1"
